{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 765,
  "lineage": "7f8a3836-4f2c-9d4b-03bb-acd4c568be0a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_elastica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08055b7fa35a8f4f2",
            "arn": "arn:aws:ec2:us-east-1:728816677571:elastic-ip/eipalloc-08055b7fa35a8f4f2",
            "domain": "vpc",
            "id": "eipalloc-08055b7fa35a8f4f2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-158-55-90.compute-1.amazonaws.com",
            "public_ip": "54.158.55.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia_ldap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0779caf41f9ba54f0",
            "arn": "arn:aws:ec2:us-east-1:728816677571:instance/i-09b323596af4150e7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b323596af4150e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "claveEc2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0162cd43d33964b09",
            "private_dns": "ip-10-0-2-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e83e790d6b4aa505",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc7c0d3af90f57ac",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-059a2ed5e167fa3c5"
            ]
          },
          "dependencies": [
            "aws_security_group.grupo_seguridad_ldap",
            "aws_security_group.grupo_seguridad_web",
            "aws_subnet.subnet_privada",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancia_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0779caf41f9ba54f0",
            "arn": "arn:aws:ec2:us-east-1:728816677571:instance/i-00a7505a47d9cd43a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a7505a47d9cd43a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "claveEc2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c62331e3641ca921",
            "private_dns": "ip-10-0-1-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-3-239-43-121.compute-1.amazonaws.com",
            "public_ip": "3.239.43.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05cc9d104775ffd25",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05efd8c666019da10",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08faaf07749c712c2"
            ]
          },
          "dependencies": [
            "aws_security_group.grupo_seguridad_web",
            "aws_subnet.subnet_publica",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728816677571:internet-gateway/igw-0ea75e167aa2c14d7",
            "id": "igw-0ea75e167aa2c14d7",
            "owner_id": "728816677571",
            "tags": {
              "Name": "gateway"
            },
            "tags_all": {
              "Name": "gateway"
            },
            "vpc_id": "vpc-00f64016c4da96065"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08055b7fa35a8f4f2",
            "association_id": "eipassoc-0d6d6c6ace59de6dc",
            "connectivity_type": "public",
            "id": "nat-0f95893552d11f3b0",
            "network_interface_id": "eni-05cbc58c1e48895f7",
            "private_ip": "10.0.1.228",
            "public_ip": "54.158.55.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05efd8c666019da10",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.ip_elastica",
            "aws_internet_gateway.gateway",
            "aws_subnet.subnet_publica",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "enrutamiento",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728816677571:route-table/rtb-0e881d22dd14ff15d",
            "id": "rtb-0e881d22dd14ff15d",
            "owner_id": "728816677571",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea75e167aa2c14d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "enrutamiento publica"
            },
            "tags_all": {
              "Name": "enrutamiento publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f64016c4da96065"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "enrutamiento_privado",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728816677571:route-table/rtb-0e1c28befd0f7b70b",
            "id": "rtb-0e1c28befd0f7b70b",
            "owner_id": "728816677571",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f95893552d11f3b0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "enrutamiento_privada"
            },
            "tags_all": {
              "Name": "enrutamiento_privada"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f64016c4da96065"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip_elastica",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.subnet_publica",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asociacion_tablas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08778e04a32b24642",
            "route_table_id": "rtb-0e881d22dd14ff15d",
            "subnet_id": "subnet-05efd8c666019da10"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.enrutamiento",
            "aws_subnet.subnet_publica",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asociacion_tablas_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f2c5b387bc50364",
            "route_table_id": "rtb-0e1c28befd0f7b70b",
            "subnet_id": "subnet-0bc7c0d3af90f57ac"
          },
          "dependencies": [
            "aws_eip.ip_elastica",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.enrutamiento_privado",
            "aws_subnet.subnet_privada",
            "aws_subnet.subnet_publica",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grupo_seguridad_ldap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728816677571:security-group/sg-059a2ed5e167fa3c5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059a2ed5e167fa3c5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08faaf07749c712c2"
                ],
                "self": false,
                "to_port": 1389
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08faaf07749c712c2"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250516151236363900000004",
            "name_prefix": "terraform-",
            "owner_id": "728816677571",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00f64016c4da96065"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.grupo_seguridad_web",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grupo_seguridad_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728816677571:security-group/sg-08faaf07749c712c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08faaf07749c712c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250516151232463400000002",
            "name_prefix": "terraform-",
            "owner_id": "728816677571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grupo_seguridad"
            },
            "tags_all": {
              "Name": "grupo_seguridad"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f64016c4da96065"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728816677571:subnet/subnet-0bc7c0d3af90f57ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc7c0d3af90f57ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728816677571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_privada"
            },
            "tags_all": {
              "Name": "subnet_privada"
            },
            "vpc_id": "vpc-00f64016c4da96065"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728816677571:subnet/subnet-05efd8c666019da10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05efd8c666019da10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "728816677571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_publica"
            },
            "tags_all": {
              "Name": "subnet_publica"
            },
            "vpc_id": "vpc-00f64016c4da96065"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728816677571:vpc/vpc-00f64016c4da96065",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1cd6af5ac9dab39",
            "default_route_table_id": "rtb-09b741e38438650a6",
            "default_security_group_id": "sg-0de3f51299a083bf0",
            "dhcp_options_id": "dopt-037beabc9522855ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f64016c4da96065",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b741e38438650a6",
            "owner_id": "728816677571",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}